fix schedule on mobile

--- a/pharmacy_showcase/static/css/schedule-mobile.css
+++ b/pharmacy_showcase/static/css/schedule-mobile.css
@@ -72,7 +72,7 @@
     grid-row-end: 11;
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
     padding-bottom: 20px;
 }
 
@@ -81,6 +81,6 @@
 }
 
 .day-timeslot {
-    font-size: 12px;
+    font-size: 11px;
 }
 
